text for time not left aligned in scrollview. now fixed

--- a/static-html/stylesheets/less/main.less
+++ b/static-html/stylesheets/less/main.less
@@ -498,6 +498,7 @@ div#aditl-data {
                             line-height: normal;
                             font-weight: 200;
                             font-size: @timelineLargeText;
+                            text-aign: left;
                         }
                         
                         p {
